tests/kulezi_tests/bad/self.lat
class C {
}

int main() {
    C x = new C;
    x.self;
    return 0;
}